# CppProjectTemplate

./: CMakeLists.txt  README.md
dependencies/cmake/: cpp-httplib.cmake  gflags.cmake  glog.cmake  googletest.cmake  nlohmannjson.cmake
src/: test-include.cc
